[project]
name = "markdown-chunker"
version = "0.1.0"
description = "Break markdown text into semantic chunks via C++ extension"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pybind11>=2.13.6",
]

# Package metadata for PyPI
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["markdown", "chunking", "pybind11"]

[project.scripts]
markdown-chunker = "markdown_chunker.cli:main"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.13.6"]
build-backend = "setuptools.build_meta"

